--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USERNAME=postgres
-DB_PASSWORD=1234
+DB_USER=postgres
+DB_PASSWORD=123456
 DB_HOST=localhost
-DB=sqlanches
+DB=servernode
 DB_PORT=5432
